kube/enviroments/dev/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
  labels:
    app: frontend
    app.kubernetes.io/part-of: microphoto
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 4321
      targetPort: 4321
